# LR-Diabetes

./: Diabetes.xls  DiabetesTest2.xls  main.py  pyproject.toml
